--- a/web/html/xui/form/tls_settings.html
+++ b/web/html/xui/form/tls_settings.html
@@ -187,7 +187,7 @@
         <a-input v-model.trim="inbound.stream.reality.serverNames" style="width: 300px"></a-input>
     </a-form-item>
     <a-form-item label="ShortIds">
-        <a-icon @click="inbound.stream.reality.shortIds = RandomUtil.randomShortId()" type="sync"> </a-icon>
+        <a-icon @click="inbound.stream.reality.shortIds = RandomUtil.randomShortId(8)" type="sync"> </a-icon>
         <a-input v-model.trim="inbound.stream.reality.shortIds" style="width: 150px;"></a-input>
     </a-form-item>
     <br>
