better clients info tables
Co-Authored-By: Alireza Ahmadi <alireza7@gmail.com>

--- a/web/html/xui/form/protocol/vmess.html
+++ b/web/html/xui/form/protocol/vmess.html
@@ -97,10 +97,12 @@
         <a-collapse-panel :header="'{{ i18n "pages.client.clientCount" }}: ' + inbound.settings.vmesses.length">
             <table width="100%">
                     <tr class="client-table-header">
-                    <th v-for="col in Object.keys(inbound.settings.vmesses[0]).slice(0, 3)">[[ col ]]</th>
+                        <th>{{ i18n "pages.inbounds.email" }}</th>
+                        <th>ID</th>
                 </tr>
                 <tr v-for="(client, index) in inbound.settings.vmesses" :class="index % 2 == 1 ? 'client-table-odd-row' : ''">
-                    <td v-for="col in Object.values(client).slice(0, 3)">[[ col ]]</td>
+                    <td>[[ client.email ]]</td>
+                    <td>[[ client.id ]]</td>
                 </tr>
             </table>
         </a-collapse-panel>
